// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getCleanPasswords should get correct clean passwords 1`] = `
[
  {
    "changes": [
      {
        "i": 1,
        "letter": "a",
        "substitution": "4",
      },
      {
        "i": 2,
        "letter": "u",
        "substitution": "|_|",
      },
      {
        "i": 4,
        "letter": "m",
        "substitution": "nn",
      },
      {
        "i": 5,
        "letter": "a",
        "substitution": "4",
      },
    ],
    "isFullSubstitution": true,
    "password": "Pau$mard",
  },
  {
    "changes": [
      {
        "i": 1,
        "letter": "a",
        "substitution": "4",
      },
      {
        "i": 2,
        "letter": "u",
        "substitution": "|_|",
      },
      {
        "i": 4,
        "letter": "m",
        "substitution": "nn",
      },
    ],
    "isFullSubstitution": false,
    "password": "Pau$m4rd",
  },
  {
    "changes": [
      {
        "i": 1,
        "letter": "a",
        "substitution": "4",
      },
      {
        "i": 2,
        "letter": "u",
        "substitution": "|_|",
      },
      {
        "i": 6,
        "letter": "a",
        "substitution": "4",
      },
    ],
    "isFullSubstitution": false,
    "password": "Pau$nnard",
  },
  {
    "changes": [
      {
        "i": 1,
        "letter": "a",
        "substitution": "4",
      },
      {
        "i": 2,
        "letter": "u",
        "substitution": "|_|",
      },
    ],
    "isFullSubstitution": false,
    "password": "Pau$nn4rd",
  },
  {
    "changes": [
      {
        "i": 1,
        "letter": "a",
        "substitution": "4",
      },
      {
        "i": 6,
        "letter": "m",
        "substitution": "nn",
      },
      {
        "i": 7,
        "letter": "a",
        "substitution": "4",
      },
    ],
    "isFullSubstitution": false,
    "password": "Pa|_|$mard",
  },
  {
    "changes": [
      {
        "i": 1,
        "letter": "a",
        "substitution": "4",
      },
      {
        "i": 6,
        "letter": "m",
        "substitution": "nn",
      },
    ],
    "isFullSubstitution": false,
    "password": "Pa|_|$m4rd",
  },
  {
    "changes": [
      {
        "i": 1,
        "letter": "a",
        "substitution": "4",
      },
      {
        "i": 8,
        "letter": "a",
        "substitution": "4",
      },
    ],
    "isFullSubstitution": false,
    "password": "Pa|_|$nnard",
  },
  {
    "changes": [
      {
        "i": 1,
        "letter": "a",
        "substitution": "4",
      },
    ],
    "isFullSubstitution": false,
    "password": "Pa|_|$nn4rd",
  },
  {
    "changes": [
      {
        "i": 2,
        "letter": "u",
        "substitution": "|_|",
      },
      {
        "i": 4,
        "letter": "m",
        "substitution": "nn",
      },
      {
        "i": 5,
        "letter": "a",
        "substitution": "4",
      },
    ],
    "isFullSubstitution": false,
    "password": "P4u$mard",
  },
  {
    "changes": [
      {
        "i": 2,
        "letter": "u",
        "substitution": "|_|",
      },
      {
        "i": 4,
        "letter": "m",
        "substitution": "nn",
      },
    ],
    "isFullSubstitution": false,
    "password": "P4u$m4rd",
  },
  {
    "changes": [
      {
        "i": 2,
        "letter": "u",
        "substitution": "|_|",
      },
      {
        "i": 6,
        "letter": "a",
        "substitution": "4",
      },
    ],
    "isFullSubstitution": false,
    "password": "P4u$nnard",
  },
  {
    "changes": [
      {
        "i": 2,
        "letter": "u",
        "substitution": "|_|",
      },
    ],
    "isFullSubstitution": false,
    "password": "P4u$nn4rd",
  },
  {
    "changes": [
      {
        "i": 6,
        "letter": "m",
        "substitution": "nn",
      },
      {
        "i": 7,
        "letter": "a",
        "substitution": "4",
      },
    ],
    "isFullSubstitution": false,
    "password": "P4|_|$mard",
  },
  {
    "changes": [
      {
        "i": 6,
        "letter": "m",
        "substitution": "nn",
      },
    ],
    "isFullSubstitution": false,
    "password": "P4|_|$m4rd",
  },
  {
    "changes": [
      {
        "i": 8,
        "letter": "a",
        "substitution": "4",
      },
    ],
    "isFullSubstitution": false,
    "password": "P4|_|$nnard",
  },
  {
    "changes": [],
    "isFullSubstitution": false,
    "password": "P4|_|$nn4rd",
  },
]
`;

exports[`getCleanPasswords should limit the substitutions correctly 1`] = `
[
  {
    "changes": [
      {
        "i": 0,
        "letter": "w",
        "substitution": "vv",
      },
    ],
    "isFullSubstitution": true,
    "password": "w",
  },
  {
    "changes": [
      {
        "i": 0,
        "letter": "f",
        "substitution": "v",
      },
      {
        "i": 1,
        "letter": "f",
        "substitution": "v",
      },
    ],
    "isFullSubstitution": true,
    "password": "ff",
  },
  {
    "changes": [
      {
        "i": 0,
        "letter": "f",
        "substitution": "v",
      },
      {
        "i": 1,
        "letter": "u",
        "substitution": "v",
      },
    ],
    "isFullSubstitution": true,
    "password": "fu",
  },
]
`;

exports[`getCleanPasswords should substitute to multiple symbols correctly 1`] = `
[
  {
    "changes": [
      {
        "i": 1,
        "letter": "a",
        "substitution": "@",
      },
      {
        "i": 4,
        "letter": "fi",
        "substitution": "ﬁ",
      },
    ],
    "isFullSubstitution": true,
    "password": "pacific",
  },
  {
    "changes": [
      {
        "i": 1,
        "letter": "a",
        "substitution": "@",
      },
    ],
    "isFullSubstitution": false,
    "password": "paciﬁc",
  },
  {
    "changes": [
      {
        "i": 4,
        "letter": "fi",
        "substitution": "ﬁ",
      },
    ],
    "isFullSubstitution": false,
    "password": "p@cific",
  },
  {
    "changes": [],
    "isFullSubstitution": false,
    "password": "p@ciﬁc",
  },
]
`;

exports[`getCleanPasswords should substitute to multiple variants correctly 1`] = `
[
  {
    "changes": [
      {
        "i": 0,
        "letter": "w",
        "substitution": "vv",
      },
    ],
    "isFullSubstitution": true,
    "password": "w",
  },
  {
    "changes": [
      {
        "i": 0,
        "letter": "f",
        "substitution": "v",
      },
      {
        "i": 1,
        "letter": "f",
        "substitution": "v",
      },
    ],
    "isFullSubstitution": true,
    "password": "ff",
  },
  {
    "changes": [
      {
        "i": 0,
        "letter": "f",
        "substitution": "v",
      },
      {
        "i": 1,
        "letter": "u",
        "substitution": "v",
      },
    ],
    "isFullSubstitution": true,
    "password": "fu",
  },
  {
    "changes": [
      {
        "i": 0,
        "letter": "u",
        "substitution": "v",
      },
      {
        "i": 1,
        "letter": "f",
        "substitution": "v",
      },
    ],
    "isFullSubstitution": true,
    "password": "uf",
  },
  {
    "changes": [
      {
        "i": 0,
        "letter": "u",
        "substitution": "v",
      },
      {
        "i": 1,
        "letter": "u",
        "substitution": "v",
      },
    ],
    "isFullSubstitution": true,
    "password": "uu",
  },
  {
    "changes": [
      {
        "i": 0,
        "letter": "f",
        "substitution": "v",
      },
    ],
    "isFullSubstitution": false,
    "password": "fv",
  },
  {
    "changes": [
      {
        "i": 0,
        "letter": "u",
        "substitution": "v",
      },
    ],
    "isFullSubstitution": false,
    "password": "uv",
  },
  {
    "changes": [
      {
        "i": 1,
        "letter": "f",
        "substitution": "v",
      },
    ],
    "isFullSubstitution": false,
    "password": "vf",
  },
  {
    "changes": [
      {
        "i": 1,
        "letter": "u",
        "substitution": "v",
      },
    ],
    "isFullSubstitution": false,
    "password": "vu",
  },
  {
    "changes": [],
    "isFullSubstitution": false,
    "password": "vv",
  },
]
`;
